Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Main Content - Nav bar</header>
+
+    <section>Main Image</section>
+    <section>Club Ethos</section>
+    <section>Locations, Distances and times</section>
+
+    <footer>Social links</footer>
 </body>
 </html>
