--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Pheonix Park</h3>
+        </div>
     </section>
     <section>Club Ethos</section>
     <section>Locations, Distances and times</section>
