--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
             <h3>Dublin Docklands & Pheonix Park</h3>
         </div>
     </section>
-    <section>Club Ethos</section>
+
+    <section id="club-ethos">
+        <h1>Why Love Running With Us ?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
+    </section>
+
     <section>Locations, Distances and times</section>
 
     <footer>Social links</footer>
