Add social media icons to footer.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,30 @@
         </div>
     </section>
 
-    <footer>Social links</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (Opens in new tab)">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (Opens in new tab)">
+                    <i class="fab fa-twitter-square"></i></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (Opens in new tab)">
+                    <i class="fab fa-youtube-square"></i></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (Opens in new tab)">
+                    <i class="fab fa-instagram"></i></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
 <!-----Font Awesome---->    
 <script src="https://kit.fontawesome.com/03b585eb9d.js" crossorigin="anonymous"></script>
