--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
                 
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 
                 <li>
